--- a/Linear_Models/LinearModels.ipynb
+++ b/Linear_Models/LinearModels.ipynb
@@ -16,6 +16,8 @@
     "        colorlinks: true\n",
     "        toc: true\n",
     "        toc-title: Table of Contents\n",
+    "        keep-tex: true\n",
+    "        lof: true\n",
     "---"
    ]
   },
@@ -25,6 +27,19 @@
    "metadata": {},
    "source": [
     "# Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "0b660ddf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from sklearn.preprocessing import add_dummy_feature\n",
+    "from sklearn.linear_model import LinearRegression"
    ]
   },
   {
@@ -76,7 +91,9 @@
     "- $\\theta \\cdot x$ is the dot product between $\\theta$ & x. Both are colum vectors.\n",
     "\n",
     "\n",
-    "$\\hat{y} = \\theta \\cdot x = \\theta^{T}x = [\\theta_{0} \\dots \\theta_{n}] \\begin{bmatrix} x_{0} \\\\ \\vdots \\\\ x_{n}\\end{bmatrix} = \\theta_{0} + \\theta_{1}x_{1} + \\theta_{2}x_{2} + \\dots + \\theta_{n}x_{n}$"
+    "$\\hat{y} = \\theta \\cdot x = \\theta^{T}x = [\\theta_{0} \\dots \\theta_{n}] \\begin{bmatrix} x_{0} \\\\ \\vdots \\\\ x_{n}\\end{bmatrix} = \\theta_{0} + \\theta_{1}x_{1} + \\theta_{2}x_{2} + \\dots + \\theta_{n}x_{n}$\n",
+    "\n",
+    "where $x_{0} = 1$"
    ]
   },
   {
@@ -115,9 +132,284 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0e8fd495",
+   "metadata": {},
+   "source": [
+    "#### Examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "fb0df40c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Generate dummy data\n",
+    "\n",
+    "np.random.seed(42)\n",
+    "m = 100\n",
+    "X = 2 * np.random.randn(m, 1)\n",
+    "y = 3 * X + np.random.randn(m, 1)\n",
+    "\n",
+    "# Add bias term to X\n",
+    "X_b = add_dummy_feature(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4efffafb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((100, 2), (100, 1))"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_b.shape, y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "8e811a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best_theta = np.linalg.inv(X_b.T @ X_b) @ X_b.T @ y # Using the normal eqaution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "62bf9e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00742783],\n",
+       "       [2.92837142]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_theta"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01a18ba8",
+   "metadata": {},
+   "source": [
+    "The equation is $y = 3x + \\text{Gaussian Noise}$, and you can see that the estimated $\\theta_{1}$ is $2.9 \\approx 3$ and $\\theta_{0} = 0$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "7b0ba857",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make some predictions\n",
+    "\n",
+    "X_new = np.array([[0], [2]])\n",
+    "X_new = add_dummy_feature(X_new)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "76b2d921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = X_new @ best_theta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "5fbcdfb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00742783],\n",
+       "       [5.86417067]])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8e74a1",
+   "metadata": {},
+   "source": [
+    "### Linear Regression with `scikit-learn`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "2198357e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression()"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr = LinearRegression()\n",
+    "lr.fit(X_b, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bde55729",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.        , 2.92837142]])"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lr.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "04e455d7",
+   "metadata": {},
+   "source": [
+    "The `LinearRegression` in `sklearn` computes $X^{+}y$ where $X_{+}$ is the pseudoinverse (Moore - Penrose pseudoinverse). We can compute it directly using `np.linalg.pinv` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "66ccafc4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.00742783],\n",
+       "       [2.92837142]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.linalg.pinv(X_b) @ y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39e77567",
+   "metadata": {},
+   "source": [
+    "### Computational Complexity"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4ebbf79",
+   "metadata": {},
+   "source": [
+    "- Computing the inverse of $X^{T}X$ which is (n + 1) x (n + 1) matrix upto $O(n^{3})$. The scikit-learn Linear Regression is almost $O(n^{2})$\n",
+    "- However, once computed, time to make predictions is very fast. It scales $O(n)$ with the number of predictions to be made"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89a83376",
+   "metadata": {},
+   "source": [
+    "### Gradient Descent\n",
+    "\n",
+    "- This is an iterative method to find the parameters of the model\n",
+    "- We compute the gradient of the loss function at a particular point and move in the direction of the -ve gradient (the steepest descent)\n",
+    "\n",
+    "Ex: You want to go down hill from a the top but it is very foggy, you use your feet to find the next steepest descent point\n",
+    "\n",
+    "We are basically searching in the model's parameter space, so more the parameters, the harder the search becomes.\n",
+    "\n",
+    "Factors affecting search:\n",
+    "- Learning rate determines how big of a step we are taking, too big and we may overshoot\n",
+    "- Shape of the function, if the loss function is complex (has lots of highs and toughs) there are chances our GD may get stuck in a *Local Minima* & not the *Global Minima*\n",
+    "\n",
+    "Fortunately, MSE is a convex function all we do is go down the slope to the bottom of the bowl"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "54d76ea5",
+   "metadata": {},
+   "source": [
+    "#### Batch Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e0f60789",
+   "metadata": {},
+   "source": [
+    "To implement GD we need to compute the partial derivative of the Loss function with each parameter of the model\n",
+    "\n",
+    "$MSE(\\theta) = \\frac{1}{m} \\sum_{i=1}^m (\\theta^T x^{(i)} - y^{(i)})^2$\n",
+    "\n",
+    "$\\frac{\\partial MSE(\\theta)}{\\partial \\theta_{j}} = \\frac{2}{m} \\sum_{i=1}^m (\\theta^T x^{(i)} - y^{(i)}) x_{j}$\n",
+    "\n",
+    "Rather than computing them one-by-one, we vectorize the whole stuff,\n",
+    "\n",
+    "$\\nabla_{\\theta}MSE(\\theta) = \\begin{bmatrix} \\frac{\\partial MSE(\\theta)}{\\partial \\theta_{0}} \\\\ \\frac{\\partial MSE(\\theta)}{\\partial \\theta_{1}} \\\\ \\vdots \\\\ \\frac{\\partial MSE(\\theta)}{\\partial \\theta_{n}} \\end{bmatrix} = \\frac{2}{m} X^{T} (X\\theta - y)$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc5c34e0",
+   "id": "f10024d0",
    "metadata": {},
    "outputs": [],
    "source": []
