--- a/Hands-on-ML-with-sklearn-and-tf/Linear-Models/LinearModels.ipynb
+++ b/Hands-on-ML-with-sklearn-and-tf/Linear-Models/LinearModels.ipynb
@@ -867,9 +867,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ffe1263f",
+   "metadata": {},
+   "source": [
+    "# Ridge Regression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74716603",
+   "id": "372006f2",
    "metadata": {},
    "outputs": [],
    "source": []
