--- a/Hands-on-ML-with-sklearn-and-tf/Linear-Models/LinearModels.tex
+++ b/Hands-on-ML-with-sklearn-and-tf/Linear-Models/LinearModels.tex
@@ -191,7 +191,7 @@
 
 \begin{document}
 \maketitle
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, interior hidden, enhanced, sharp corners, borderline west={3pt}{0pt}{shadecolor}, frame hidden, breakable]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[breakable, enhanced, frame hidden, sharp corners, interior hidden, boxrule=0pt, borderline west={3pt}{0pt}{shadecolor}]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of Contents}
 {
@@ -772,6 +772,9 @@ Model's generalization error is a sum of 3 different error:
 \item
   Only way to solve is to clean the data.
 \end{itemize}
+
+\hypertarget{ridge-regression}{%
+\chapter{Ridge Regression}\label{ridge-regression}}
 
 
 
